[gd_scene load_steps=22 format=2]

[ext_resource path="res://src/main/route1.png" type="Texture" id=1]
[ext_resource path="res://src/main/route2.png" type="Texture" id=2]
[ext_resource path="res://src/idkanymore/idk.gd" type="Script" id=3]
[ext_resource path="res://src/temp/Oswald-Bold.ttf" type="DynamicFontData" id=6]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.0463576, 0.953642, 1 )
colors = PoolColorArray( 0, 0, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0, 0, 0, 1 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )
width = 600

[sub_resource type="DynamicFont" id=6]
size = 100
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=13]
size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.105882, 0.105882, 0.105882, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.168627 )
shadow_size = 8
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color( 0, 0, 0, 0.168627 )
shadow_size = 8
anti_aliasing_size = 5.0

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 0 )

[sub_resource type="Animation" id=14]
resource_name = "choose path"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Yes:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 203.066, 285.806 ), Vector2( -316.934, 273.806 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("No:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 601.381, 285.806 ), Vector2( 1147.38, 289.806 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../img/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Have You Played Moros?", "Have You", "Have", "
", "What", "What Path", "What Path Did", "What Path Did You Take", "What Path Did You Take?" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("img/Evil:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -373, 215 ), Vector2( 151, 297 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("img/Normal:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1115, 243 ), Vector2( 627, 299 ) ]
}

[sub_resource type="Animation" id=15]
resource_name = "thisisnotokwhyhaveunotplayedthegame"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Yes:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 203.066, 285.806 ), Vector2( -316.934, 273.806 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("No:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 601.381, 285.806 ), Vector2( 1147.38, 289.806 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../img/Label:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ "Have You Played Moros?", "Have You Played", "Have You", "Have", "
", "C", "Ch", "Cho", "Choos", "Choose" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Play Moros:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -316.934, 273.806 ), Vector2( 227.066, 289.806 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Continue Anyways:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1103.07, 291.806 ), Vector2( 487.066, 285.806 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Turn On No-Spoilers Mode:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 285.066, 617.807 ), Vector2( 289.066, 375.806 ) ]
}

[sub_resource type="Animation" id=16]
resource_name = "Hover Evil"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("usr/img/Evil/Evil:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ), Vector2( 0.55, 0.55 ) ]
}

[sub_resource type="Animation" id=17]
resource_name = "Hover Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("usr/img/Normal/Normal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.45, 0.45 ), Vector2( 0.55, 0.55 ) ]
}

[sub_resource type="Animation" id=18]
resource_name = "UnHover Evil"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("usr/img/Evil/Evil:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.55, 0.55 ), Vector2( 0.45, 0.45 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "UnHover Normal"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("usr/img/Normal/Normal:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.55, 0.55 ), Vector2( 0.45, 0.45 ) ]
}

[sub_resource type="Animation" id=20]
resource_name = "background"
tracks/0/type = "value"
tracks/0/path = NodePath("Background:texture:gradient:colors")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="GradientTexture" id=1]
width = 1024

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("overlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("overlay:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="sc" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="img" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="img"]
position = Vector2( 512, 308 )
rotation = 1.5708
scale = Vector2( 1.0162, 1089.1 )
texture = SubResource( 5 )

[node name="Label" type="Label" parent="img"]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 277.897
margin_top = 76.8125
margin_right = 1278.9
margin_bottom = 225.813
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 6 )
text = "Have You Played Moros?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="usr" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Yes" type="Button" parent="usr"]
margin_left = 203.066
margin_top = 285.806
margin_right = 447.065
margin_bottom = 357.807
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = "Yes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Turn On No-Spoilers Mode" type="Button" parent="usr"]
margin_left = 285.066
margin_top = 617.807
margin_right = 792.066
margin_bottom = 689.807
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 11 )
disabled = true
text = "Use No-Spoilers Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play Moros" type="Button" parent="usr"]
margin_left = -316.934
margin_top = 273.806
margin_right = -72.9344
margin_bottom = 345.807
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = "Play Moros"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue Anyways" type="Button" parent="usr"]
margin_left = 1103.07
margin_top = 291.806
margin_right = 1480.07
margin_bottom = 363.807
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = " Continue Anyways "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="No" type="Button" parent="usr"]
margin_left = 601.381
margin_top = 285.806
margin_right = 845.381
margin_bottom = 357.806
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 11 )
text = "No"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transition" type="AnimationPlayer" parent="usr"]
"anims/choose path" = SubResource( 14 )
anims/thisisnotokwhyhaveunotplayedthegame = SubResource( 15 )

[node name="img" type="Control" parent="usr"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evil" type="Control" parent="usr/img"]
margin_left = -373.0
margin_top = 215.0
margin_right = -50.0
margin_bottom = 392.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Evil" type="Sprite" parent="usr/img/Evil"]
position = Vector2( 161, 86 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 1 )

[node name="Normal" type="Control" parent="usr/img"]
margin_left = 1115.0
margin_top = 243.0
margin_right = 1442.0
margin_bottom = 417.999
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Normal" type="Sprite" parent="usr/img/Normal"]
position = Vector2( 107.122, 85.9999 )
scale = Vector2( 0.45, 0.45 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Hover Evil" = SubResource( 16 )
"anims/Hover Normal" = SubResource( 17 )
"anims/UnHover Evil" = SubResource( 18 )
"anims/UnHover Normal" = SubResource( 19 )
anims/background = SubResource( 20 )

[node name="overlay" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="overlay" type="Sprite" parent="overlay"]
position = Vector2( 512, 304 )
scale = Vector2( 1, 600 )
texture = SubResource( 1 )

[node name="fade" type="AnimationPlayer" parent="overlay"]
anims/fadein = SubResource( 2 )
anims/fadeout = SubResource( 3 )

[connection signal="pressed" from="usr/Yes" to="." method="_on_Yes_pressed"]
[connection signal="pressed" from="usr/Play Moros" to="." method="_on_Play_Moros_pressed"]
[connection signal="pressed" from="usr/Continue Anyways" to="." method="_on_Continue_Anyways_pressed"]
[connection signal="pressed" from="usr/No" to="." method="_on_No_pressed"]
[connection signal="animation_finished" from="usr/transition" to="." method="_on_transition_animation_finished"]
[connection signal="gui_input" from="usr/img/Evil" to="." method="_on_Evil_gui_input"]
[connection signal="mouse_entered" from="usr/img/Evil" to="." method="_on_Evil_mouse_entered"]
[connection signal="mouse_exited" from="usr/img/Evil" to="." method="_on_Evil_mouse_exited"]
[connection signal="mouse_entered" from="usr/img/Normal" to="." method="_on_Normal_mouse_entered"]
[connection signal="mouse_exited" from="usr/img/Normal" to="." method="_on_Normal_mouse_exited"]
[connection signal="animation_finished" from="overlay/fade" to="." method="_on_fade_animation_finished"]
